spring security dependency added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=rn$77
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+spring.main.allow-bean-definition-overriding=true
